# freeplay-servertalk

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  claude.md  deploy.sh  setup-turn.sh  status.md
.github/workflows/: release.yml
src/: auth.rs  config.rs  discord.rs  error.rs  incidents.rs  main.rs  matchmaking.rs  models.rs  state.rs  sweeper.rs  turn.rs
tools/: fetch-incidents.ps1
